[package]
name = "rps-sys"
version = "0.3.0"
description = "Unsafe bindings for RPS API generated with bindgen"
categories = ["api-bindings", "external-ffi-bindings", "game-development", "graphics", "rendering"]
keywords = ["amd", "vulkan", "d3d12", "d3d11", "shaders"]
links = "rps"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
d3d12 = []
d3d11 = []
vk = []

[dependencies]

[build-dependencies]
bindgen = "0.63"
cc = "1.0"
