[package]
name = "rps"
version = "0.1.0"
description = "Rust bindings for RPS API"
categories = ["api-bindings", "game-development", "graphics", "rendering"]
keywords = ["rps", "amd", "vk", "vulkan", "d3d12", "d3d11", "gamedev", "shaders"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
thiserror = "1.0"

rps-sys = { path = "../rps-sys" }
