[package]
name = "rps"
version = "0.2.0"
description = "Rust bindings for RPS API"
categories = ["api-bindings", "game-development", "graphics", "rendering"]
keywords = ["vk", "vulkan", "d3d12", "d3d11", "shaders"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
thiserror = "1.0"
bitflags = "1.3"

rps-sys = { path = "../rps-sys", version = "0.3.0" }
